// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitSwift snapshots > async module (async throws function) 1`] = `
"==== ClearKrypt.swift (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

import Foundation

public typealias ID = String
public typealias Email = String

==== app/net/Functions.swift (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

/// - Throws: NetworkError
public func fetchUser(id: ID) async throws -> RemoteUser {
    return RemoteUser(id: id, name: "Remote")
}

==== app/net/NetworkError.swift (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

public enum NetworkError: Error, Hashable {
    case timeout
    case server(message: String)
}

==== app/net/RemoteUser.swift (module: app.net) ====
// Generated by ClearKrypt 0.1.0 from src/net.ck (module app.net).
// Do not edit. Changes will be overwritten.

public struct RemoteUser: Hashable {
    public let id: ID
    public let name: String

    public init(id: ID, name: String) {
        self.id = id
        self.name = name
    }
}
"
`;

exports[`emitSwift snapshots > cross module project 1`] = `
"==== ClearKrypt.swift (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

import Foundation

public typealias ID = String
public typealias Email = String

==== app/api/Functions.swift (module: app.api) ====
// Generated by ClearKrypt 0.1.0 from src/api.ck (module app.api).
// Do not edit. Changes will be overwritten.

public func welcome(user: User) -> String {
    return "Welcome, " + user.name
}

==== app/models/User.swift (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

public struct User: Hashable {
    public let id: ID
    public let name: String

    public init(id: ID, name: String) {
        self.id = id
        self.name = name
    }
}
"
`;

exports[`emitSwift snapshots > functions module (expressions, if/else, let) 1`] = `
"==== ClearKrypt.swift (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

import Foundation

public typealias ID = String
public typealias Email = String

==== app/text/Functions.swift (module: app.text) ====
// Generated by ClearKrypt 0.1.0 from src/text.ck (module app.text).
// Do not edit. Changes will be overwritten.

public func fullName(first: String, last: String) -> String {
    return first + " " + last
}

public func larger(a: Int, b: Int) -> Int {
    if a > b {
        return a
    } else {
        return b
    }
}

public func describeCount(count: Int) -> String {
    let label = "items"
    if count == 1 {
        return "1 item"
    }
    return "many " + label
}
"
`;

exports[`emitSwift snapshots > hello world module 1`] = `
"==== ClearKrypt.swift (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

import Foundation

public typealias ID = String
public typealias Email = String

==== app/main/Functions.swift (module: app.main) ====
// Generated by ClearKrypt 0.1.0 from src/main.ck (module app.main).
// Do not edit. Changes will be overwritten.

public func greetingText(greeting: Greeting) -> String {
    return greeting.message
}

public func friendlyGreeting(message: String) -> Greeting {
    return Greeting(id: "greeting-1", message: message)
}

==== app/main/Greeting.swift (module: app.main) ====
// Generated by ClearKrypt 0.1.0 from src/main.ck (module app.main).
// Do not edit. Changes will be overwritten.

public struct Greeting: Hashable {
    public let id: ID
    public let message: String
    public let isFriendly: Bool

    public init(id: ID, message: String, isFriendly: Bool = true) {
        self.id = id
        self.message = message
        self.isFriendly = isFriendly
    }
}
"
`;

exports[`emitSwift snapshots > types project (kitchen sink model, enums, error) 1`] = `
"==== ClearKrypt.swift (module: clearkrypt) ====
// Generated by ClearKrypt 0.1.0. Shared support definitions.
// Do not edit. Changes will be overwritten.

import Foundation

public typealias ID = String
public typealias Email = String

==== app/models/AuthError.swift (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

public enum AuthError: Error, Hashable {
    case invalidCredentials
    case lockedOut(until: Date)
    case network(message: String)
}

==== app/models/BookingStatus.swift (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

public enum BookingStatus: Hashable {
    case pending
    case confirmed
    case cancelled(reason: String)
    case completed
}

==== app/models/OrderStatus.swift (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

public enum OrderStatus: String, Hashable {
    case pending
    case shipped
    case delivered
}

==== app/models/Profile.swift (module: app.models) ====
// Generated by ClearKrypt 0.1.0 from src/models.ck (module app.models).
// Do not edit. Changes will be overwritten.

import Foundation

public struct Profile: Hashable {
    public let id: ID
    public let name: String
    public let email: Email
    public let age: Int
    public let rating: Double
    public let balance: Decimal
    public let birthday: Date
    public let createdAt: Date
    public let avatarUrl: URL?
    public let thumbnail: Data
    public let tags: Set<String>
    public let scores: [Int]
    public let attributes: [String: String]
    public let isActive: Bool

    public init(
        id: ID,
        name: String,
        email: Email,
        age: Int,
        rating: Double,
        balance: Decimal,
        birthday: Date,
        createdAt: Date,
        avatarUrl: URL?,
        thumbnail: Data,
        tags: Set<String>,
        scores: [Int],
        attributes: [String: String],
        isActive: Bool = true
    ) {
        self.id = id
        self.name = name
        self.email = email
        self.age = age
        self.rating = rating
        self.balance = balance
        self.birthday = birthday
        self.createdAt = createdAt
        self.avatarUrl = avatarUrl
        self.thumbnail = thumbnail
        self.tags = tags
        self.scores = scores
        self.attributes = attributes
        self.isActive = isActive
    }
}
"
`;
